Correct the width of the deck

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header> 
     <section class="score-area">
         <span class="moves"></span>Moves
-        <div class="timer">Timer</div>
+        <div class="timer">0 Min(s) 0 Sec</div>
         <div class="restart">
             <i class="fa fa-repeat"></i>
         </div>
