--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="heading"><i class="fas fa-chess-board"></i>  Memory Game</h1>
     </header> 
     <section class="score-area">
-        <span class="moves"></span>Moves
+        <span class="moves"></span>0 Move(s)
         <div class="timer">0 Min(s) 0 Sec</div>
         <div class="restart">
             <i class="fa fa-repeat"></i>
