--- a/index.html
+++ b/index.html
@@ -23,53 +23,53 @@
         </div>
     </section>
     <ul class="deck" id="card-deck">
-        <li class="card" type="diamond">
-            <i class="fa fa-diamond"></i>
+        <li class="card open" type="python">
+            <i class="fab fa-python"></i>
         </li>
-        <li class="card" type="plane">
-            <i class="fa fa-paper-plane-o"></i>
+        <li class="card open" type="python">
+            <i class="fab fa-python"></i>
         </li>
         <li class="card open" type="js">
             <i class="fab fa-js"></i>
         </li>
-        <li class="card" type="bolt" >
-            <i class="fa fa-bolt"></i>
+        <li class="card open" type="js">
+            <i class="fab fa-js"></i>
         </li>
-        <li class="card" type="cube">
-            <i class="fa fa-cube"></i>
+        <li class="card open" type="angular">
+            <i class="fab fa-angular"></i>
         </li>
-        <li class="card match" type="anchor">
-            <i class="fa fa-anchor"></i>
+        <li class="card open" type="angular">
+            <i class="fab fa-angular"></i>
         </li>
-        <li class="card" type="leaf">
-            <i class="fa fa-leaf"></i>
+        <li class="card open" type="html5">
+            <i class="fab fa-html5"></i>
         </li>
-        <li class="card" type="bicycle">
-            <i class="fa fa-bicycle"></i>
+        <li class="card open" type="html5">
+            <i class="fab fa-html5"></i>
         </li>
-        <li class="card" type="diamond">
-            <i class="fa fa-diamond"></i>
+        <li class="card open" type="css3-alt">
+            <i class="fab fa-css3-alt"></i>
         </li>
-        <li class="card" type="bomb">
-            <i class="fa fa-bomb"></i>
+        <li class="card open" type="css3-alt">
+            <i class="fab fa-css3-alt"></i>
         </li>
-        <li class="card open show" type="leaf">
-            <i class="fa fa-leaf"></i>
+        <li class="card open" type="code">
+            <i class="fas fa-code"></i>
         </li>
-        <li class="card show" type="bomb">
-            <i class="fa fa-bomb"></i>
+        <li class="card open" type="code">
+            <i class="fas fa-code"></i>
         </li>
-        <li class="card" type="bolt">
-            <i class="fa fa-bolt"></i>
+        <li class="card open" type="database">
+            <i class="fas fa-database"></i>
         </li>
-        <li class="card" type="bicycle">
-            <i class="fa fa-bicycle"></i>
+        <li class="card open" type="bug">
+            <i class="fas fa-bug"></i>
         </li>
-        <li class="card" type="plane">
-            <i class="fa fa-paper-plane-o"></i>
+        <li class="card open" type="bug">
+            <i class="fas fa-bug"></i>
         </li>
-        <li class="card" type="cube">
-            <i class="fa fa-cube"></i>
+        <li class="card open" type="database">
+            <i class="fas fa-database"></i>
         </li>
     </ul>
 </div>
