Define the required virables and constants and functions to test the status of the cards

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1 class="heading"><i class="fas fa-chess-board"></i>  Memory Game</h1>
     </header> 
     <section class="score-panel">
+
         <span class="moves">0</span> Move(s)
         <div class="timer">0 Min(s) 0 Sec</div>
         <div class="restart" onclick=startGame()>
@@ -23,52 +24,52 @@
         </div>
     </section>
     <ul class="deck" id="card-deck">
-        <li class="card open" type="python">
+        <li class="card" type="python">
             <i class="fab fa-python"></i>
         </li>
-        <li class="card open" type="python">
+        <li class="card" type="python">
             <i class="fab fa-python"></i>
         </li>
-        <li class="card open" type="js">
+        <li class="card" type="js">
             <i class="fab fa-js"></i>
         </li>
-        <li class="card open" type="js">
+        <li class="card" type="js">
             <i class="fab fa-js"></i>
         </li>
-        <li class="card open" type="angular">
+        <li class="card" type="angular">
             <i class="fab fa-angular"></i>
         </li>
-        <li class="card open" type="angular">
+        <li class="card" type="angular">
             <i class="fab fa-angular"></i>
         </li>
-        <li class="card open" type="html5">
+        <li class="card" type="html5">
             <i class="fab fa-html5"></i>
         </li>
-        <li class="card open" type="html5">
+        <li class="card" type="html5">
             <i class="fab fa-html5"></i>
         </li>
-        <li class="card open" type="css3-alt">
+        <li class="card" type="css3-alt">
             <i class="fab fa-css3-alt"></i>
         </li>
-        <li class="card open" type="css3-alt">
+        <li class="card" type="css3-alt">
             <i class="fab fa-css3-alt"></i>
         </li>
-        <li class="card open" type="code">
+        <li class="card" type="code">
             <i class="fas fa-code"></i>
         </li>
-        <li class="card open" type="code">
+        <li class="card" type="code">
             <i class="fas fa-code"></i>
         </li>
-        <li class="card open" type="database">
+        <li class="card" type="database">
             <i class="fas fa-database"></i>
         </li>
-        <li class="card open" type="bug">
+        <li class="card" type="bug">
             <i class="fas fa-bug"></i>
         </li>
-        <li class="card open" type="bug">
+        <li class="card" type="bug">
             <i class="fas fa-bug"></i>
         </li>
-        <li class="card open" type="database">
+        <li class="card" type="database">
             <i class="fas fa-database"></i>
         </li>
     </ul>
