--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/ff30a6363c.js" crossorigin="anonymous"></script>
     <title>Memory Game</title>
@@ -75,7 +75,7 @@
       
     </ul>
 </div>
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     
 
 </body>
