Add footer and add the css of it with a small parahraph for the instructions under the timer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <i class="fa fa-repeat"></i>
         </div>
     </section>
+    <!-- A small paragraph about the game -->
+    <br><p>Playing Instructions: <br>When the game starts, all tiles are turned face down. The player then flips over two cards, selecting them by clicking on them. If the two tiles have the same image, they remain face up. Otherwise, the tiles flip back over after a small period of time.</p>
     <!--Distribute the icons to the cards -->
     <ul class="deck" id="card-deck">
         <li class="card" type="python">
@@ -77,7 +79,21 @@
         </li>
     </ul>
 </div>
+<footer><ul class="social-networks">
+    <li>
+        <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our page on Facebook (opens in a new tab)"><i class="fab fa-facebook-square"></i></a>
+    </li>
+    <li>
+        <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit our page on Twiiter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+    </li>
+    <li>
+        <a href="https://www.Instagram.com" target="_blank" rel="noopener" aria-label="Visit our page on Instagram (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+    </li>
+    <li>
+        <a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our page on Youtube (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+    </li>
+</ul></footer>
+</html>
     <script src="assets/js/script.js"></script>
 </body>
 <!-- Game body ends here -->
-</html>
