--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
     </li>
 </ul></footer>
 </html>
-    <script src="assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 <!-- Game body ends here -->
