correct the meta and change the li from type to id

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="Description" content="Memory Game"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -29,52 +30,52 @@
     <br><p>Playing Instructions: <br>When the game starts, all tiles are turned face down. The player then flips over two cards, selecting them by clicking on them. If the two tiles have the same image, they remain face up. Otherwise, the tiles flip back over after a small period of time.</p>
     <!--Distribute the icons to the cards -->
     <ul class="deck" id="card-deck">
-        <li class="card" type="python">
+        <li class="card" id="python">
             <i class="fab fa-python"></i>
         </li>
-        <li class="card" type="python">
+        <li class="card" id="python">
             <i class="fab fa-python"></i>
         </li>
-        <li class="card" type="js">
+        <li class="card" id="js">
             <i class="fab fa-js"></i>
         </li>
-        <li class="card" type="js">
+        <li class="card" id="js">
             <i class="fab fa-js"></i>
         </li>
-        <li class="card" type="angular">
+        <li class="card" id="angular">
             <i class="fab fa-angular"></i>
         </li>
-        <li class="card" type="angular">
+        <li class="card" id="angular">
             <i class="fab fa-angular"></i>
         </li>
-        <li class="card" type="html5">
+        <li class="card" id="html5">
             <i class="fab fa-html5"></i>
         </li>
-        <li class="card" type="html5">
+        <li class="card" id="html5">
             <i class="fab fa-html5"></i>
         </li>
-        <li class="card" type="css3-alt">
+        <li class="card" id="css3-alt">
             <i class="fab fa-css3-alt"></i>
         </li>
-        <li class="card" type="css3-alt">
+        <li class="card" id="css3-alt">
             <i class="fab fa-css3-alt"></i>
         </li>
-        <li class="card" type="code">
+        <li class="card" id="code">
             <i class="fas fa-code"></i>
         </li>
-        <li class="card" type="code">
+        <li class="card" id="code">
             <i class="fas fa-code"></i>
         </li>
-        <li class="card" type="database">
+        <li class="card" id="database">
             <i class="fas fa-database"></i>
         </li>
-        <li class="card" type="database">
+        <li class="card" id="database">
             <i class="fas fa-database"></i>
         </li>
-        <li class="card" type="bug">
+        <li class="card" id="bug">
             <i class="fas fa-bug"></i>
         </li>
-        <li class="card" type="bug">
+        <li class="card" id="bug">
             <i class="fas fa-bug"></i>
         </li>
     </ul>
