put the paragraph inside a section tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script src="https://kit.fontawesome.com/ff30a6363c.js" crossorigin="anonymous"></script>
     <title>Memory Game</title>
 </head>
+
 <!--Game body starts here-->
+
 <body>
     <div class="container">
     <header>
@@ -26,9 +28,16 @@
             <i class="fa fa-repeat"></i>
         </div>
     </section>
+
     <!-- A small paragraph about the game -->
-    <br><p>Playing Instructions: <br>When the game starts, all tiles are turned face down. The player then flips over two cards, selecting them by clicking on them. If the two tiles have the same image, they remain face up. Otherwise, the tiles flip back over after a small period of time.</p>
+
+<section>
+    <br>
+    <p>Playing Instructions: <br>When the game starts, all tiles are turned face down. The player then flips over two cards, selecting them by clicking on them. If the two tiles have the same image, they remain face up. Otherwise, the tiles flip back over after a small period of time.</p>
+</section>
+
     <!--Distribute the icons to the cards -->
+    
     <ul class="deck" id="card-deck">
         <li class="card" id="python">
             <i class="fab fa-python"></i>
@@ -80,8 +89,11 @@
         </li>
     </ul>
 </div>
+
 <!-- Game body ends here -->
-<footer><ul class="social-networks">
+
+<footer>
+    <ul class="social-networks">
     <li>
         <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our page on Facebook (opens in a new tab)"><i class="fab fa-facebook-square"></i></a>
     </li>
@@ -94,9 +106,11 @@
     <li>
         <a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our page on Youtube (opens in a new tab)"><i class="fab fa-youtube"></i></a>
     </li>
-</ul></footer>
+</ul>
+</footer>
 
 <script src="assets/js/script.js"></script>
+
 </body>
 </html>
 
