--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 </section>
 
     <!--Distribute the icons to the cards -->
-    
+
+    <section>
     <ul class="deck" id="card-deck">
         <li class="card" id="python">
             <i class="fab fa-python"></i>
@@ -88,6 +89,7 @@
             <i class="fas fa-bug"></i>
         </li>
     </ul>
+</section>
 </div>
 
 <!-- Game body ends here -->
