change from id to data-framework to avoid the error in w3c validator

--- a/index.html
+++ b/index.html
@@ -39,53 +39,53 @@
     <!--Distribute the icons to the cards -->
 
     <section>
-    <ul class="deck" id="card-deck">
-        <li class="card" id="python">
+    <ul class="deck" data-framework="card-deck">
+        <li class="card" data-framework="python">
             <i class="fab fa-python"></i>
         </li>
-        <li class="card" id="python">
+        <li class="card" data-framework="python">
             <i class="fab fa-python"></i>
         </li>
-        <li class="card" id="js">
+        <li class="card" data-framework="js">
             <i class="fab fa-js"></i>
         </li>
-        <li class="card" id="js">
+        <li class="card" data-framework="js">
             <i class="fab fa-js"></i>
         </li>
-        <li class="card" id="angular">
+        <li class="card" data-framework="angular">
             <i class="fab fa-angular"></i>
         </li>
-        <li class="card" id="angular">
+        <li class="card" data-framework="angular">
             <i class="fab fa-angular"></i>
         </li>
-        <li class="card" id="html5">
+        <li class="card" data-framework="html5">
             <i class="fab fa-html5"></i>
         </li>
-        <li class="card" id="html5">
+        <li class="card" data-framework="html5">
             <i class="fab fa-html5"></i>
         </li>
-        <li class="card" id="css3-alt">
+        <li class="card" data-framework="css3-alt">
             <i class="fab fa-css3-alt"></i>
         </li>
-        <li class="card" id="css3-alt">
+        <li class="card" data-framework="css3-alt">
             <i class="fab fa-css3-alt"></i>
         </li>
-        <li class="card" id="code">
+        <li class="card" data-framework="code">
             <i class="fas fa-code"></i>
         </li>
-        <li class="card" id="code">
+        <li class="card" data-framework="code">
             <i class="fas fa-code"></i>
         </li>
-        <li class="card" id="database">
+        <li class="card" data-framework="database">
             <i class="fas fa-database"></i>
         </li>
-        <li class="card" id="database">
+        <li class="card" data-framework="database">
             <i class="fas fa-database"></i>
         </li>
-        <li class="card" id="bug">
+        <li class="card" data-framework="bug">
             <i class="fas fa-bug"></i>
         </li>
-        <li class="card" id="bug">
+        <li class="card" data-framework="bug">
             <i class="fas fa-bug"></i>
         </li>
     </ul>
