change from data-framwork to id for the card deck

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!--Distribute the icons to the cards -->
 
     <section>
-    <ul class="deck" data-framework="card-deck">
+    <ul class="deck" id="card-deck">
         <li class="card" data-framework="python">
             <i class="fab fa-python"></i>
         </li>
